--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body{
   width: 100vw;
   overflow-x: hidden;
   overflow-y: scroll;
+   -webkit-text-size-adjust:none;
 }
 
 #content{
@@ -34,8 +35,8 @@ body{
   }
 
   .one h2{
-    margin-top: -2rem;
-    margin-bottom: 3rem;
+  margin-top: -2rem;
+  margin-bottom: 3rem;
   }
 
   .one hr{
@@ -57,7 +58,8 @@ body{
   grid-row: 6 / 9;
   background-color: #7EA5E2;
   background-size: cover;
-  background-image: url(https://images.unsplash.com/photo-1486458826750-9f4ef65e3e8f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=0731f926c1111f872f10230e46b978ec&auto=format&fit=crop&w=2550&q=80);
+  background-image: url(../img/tibias.jpg);
+
 }
 
   .overlay2{
@@ -78,11 +80,26 @@ body{
     margin: 0;
   }
 
+  .two p{
+    margin-bottom: 0;
+  }
+
   .two hr{
     width: 40%;
     background-color: #FFF;
     height: .2rem;
     border: 0;
+  }
+
+  .two a{
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    margin-top: -1em;
+  }
+
+  .two a:hover{
+    color: gray;
   }
 
 .three{
@@ -337,4 +354,11 @@ body{
     margin-top: 7rem;
     padding-left: 2rem;
     text-align: left;
+    font-family: helvetica;
   }
+
+.portraits h1{
+  color: #FFF;
+  margin-top: 4rem;
+  font-size: 70px;
+}
