--- a/assets/css/style_portraits.css
+++ b/assets/css/style_portraits.css
@@ -14,6 +14,7 @@ body{
 
 .portrait1_img p {
   text-align: left;
+  margin-left: 15%;
 }
 
 .portrait1_img img {
@@ -21,13 +22,5 @@ body{
 }
 
 .portrait1_img {
-  display: block;
-  top: 0; bottom:0; left: 0; right:0;
-  margin: auto;
-}
-
-.background {
-    background-image: url("../assets/img/minimalism.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+  text-align: center;
 }
