--- a/assets/css/style_portraits.css
+++ b/assets/css/style_portraits.css
@@ -5,7 +5,6 @@ body{
   font-family: "Futura";
 }
 
-
 .Portraits {
   font-size: 60px;
   margin-bottom: 40px;
@@ -15,6 +14,7 @@ body{
 .portrait1_img p {
   text-align: left;
   margin-left: 15%;
+  font-size: 20px;
 }
 
 .portrait1_img img {
@@ -22,5 +22,19 @@ body{
 }
 
 .portrait1_img {
+  text-align: center;
+}
+
+.portrait2_img p {
+  text-align: left;
+  margin-left: 15%;
+  font-size: 20px;
+}
+
+.portrait2_img img {
+  width: 70%;
+}
+
+.portrait2_img {
   text-align: center;
 }
