--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ body{
   grid-column: 4 / 8;
   grid-row: 6 / 9;
   background-color: #FB1;
-  background-image: url(https://images.unsplash.com/photo-1532524533199-6c1e15222936?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=0da38355a6abb267877d70afac45731f&auto=format&fit=crop&w=1301&q=80);
+  background-image: url(../img/tseten.png);
   background-size: cover;
   padding: 0;
 }
@@ -134,6 +134,17 @@ body{
     background-color: #FFF;
     height: .2rem;
     border: 0;
+  }
+
+  .three p{
+    margin-bottom: 0;
+  }
+
+  .three a{
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    margin-top: -1em;
   }
 
 .four{
