--- a/assets/css/style_portraits.css
+++ b/assets/css/style_portraits.css
@@ -6,7 +6,7 @@ body{
 }
 
 .Portraits {
-  font-size: 60px;
+  font-size: 50px;
   margin-bottom: 40px;
   text-align: center;
 }
@@ -37,4 +37,31 @@ body{
 
 .portrait2_img {
   text-align: center;
+  margin-bottom: 5rem;
+  margin-top: 5rem;
+}
+
+.portrait4_img{
+  margin-left: 7rem;
+}
+
+.portrait3_img{
+  margin-top: -1053px;
+  float: right;
+  margin-right: 7rem;
+}
+
+.portrait5_img p {
+  text-align: left;
+  margin-left: 15%;
+  font-size: 20px;
+}
+
+.portrait5_img img {
+  width: 70%;
+}
+
+.portrait5_img {
+  text-align: center;
+  margin-top: 5rem;
 }
