--- a/assets/css/style_politiskreklame.css
+++ b/assets/css/style_politiskreklame.css
@@ -6,7 +6,7 @@ body{
   text-align: center;
 }
 
-.documentary {
+.politiskreklame {
   font-size: 40px;
   margin-bottom: 40px;
   text-align: center;
@@ -17,7 +17,7 @@ body{
   margin-top: 50px;
 }
 
-.documentary a{
+.politiskreklame a{
   text-decoration: none;
   font-size: 16px;
   color: #FFF;
@@ -27,6 +27,6 @@ body{
   margin-left: -280px;
 }
 
-.documentary a:hover{
+.politiskreklame a:hover{
   color: grey;
 }
