bilde lenger ned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,6 +318,10 @@ body{
   background-position: center;
 }
 
+  .eight img{
+    margin-top: 3rem;
+  }
+
   .container1{
     width: calc(50% - 2rem);
     text-align: left;
